--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,70 +2,49 @@
 name = "ev-energy-optimization"
 version = "0.1.0"
 description = ""
-authors = ["iusztinpaul <p.b.iusztin@gmail.com>"]
+authors = [
+    "Salem Fradi <salemaziz.fradi@supcom.tn>",
+    "Dhia Elhak Ezzeddini <dhiaelhak.ezzeddini@supcom.tn>"
+]
 license = "MIT"
 readme = "README.md"
 
 [tool.poetry.dependencies]
 python = ">=3.12"
-
-# Core Data Science
 pandas = "^2.2.3"
 numpy = "^2.1.2"
 scipy = "^1.14.1"
 scikit-learn = ">=1.2.0,<1.5.0"
-
-# Ensure compatible versions for Docker
 joblib = ">=1.3.0,<1.4.0"
-
-# High-performance processing
 dask = "^2025.1.0"
 "dask[dataframe]" = "^2025.1.0"
-
-# Machine Learning
 xgboost = "^2.1.2"
 optuna = "^4.0.0"
 lightgbm = "^4.5.0"
 catboost = "^1.2.7"
 torch = "^2.5.1"
 pytorch-lightning = "^2.4.0"
-
-# Optimization
 ortools = "^9.11.4210"
 pulp = "^2.9.0"
-
-# Visualization
 plotly = "^5.24.1"
 matplotlib = "^3.9.2"
 seaborn = "^0.13.2"
 streamlit = "^1.39.0"
 streamlit-folium = "^0.23.0"
-
-# Geospatial
 geopandas = "^1.0.1"
 osmnx = "^1.9.3"
 geopy = "^2.4.1"
 folium = "^0.18.0"
 pydeck = "^0.9.1"
 shapely = "^2.0.6"
-
-# Network Analysis
 networkx = "^3.4.2"
-
-# Data sources
 requests = "^2.32.3"
 beautifulsoup4 = "^4.12.3"
 python-dotenv = "^1.0.1"
-
-# Configuration
 pydantic = "^2.9.2"
 pyyaml = "^6.0.2"
-
-# Development
 jupyter = "^1.1.1"
 pytest = "^8.3.3"
 black = "^24.10.0"
-
-# Utilities
 tqdm = "^4.66.5"
 shap = "^0.46.0"
