--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,8 +16,7 @@ numpy = "^2.1.2"
 scipy = "^1.14.1"
 scikit-learn = ">=1.2.0,<1.5.0"
 joblib = ">=1.3.0,<1.4.0"
-dask = "^2025.1.0"
-"dask[dataframe]" = "^2025.1.0"
+dask = {version = "^2025.1.0", extras = ["dataframe"]}
 xgboost = "^2.1.2"
 optuna = "^4.0.0"
 lightgbm = "^4.5.0"
