--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,9 @@ authors = [
 license = "MIT"
 readme = "README.md"
 
+[[tool.poetry.packages]]
+include = "src"
+
 [tool.poetry.dependencies]
 python = ">=3.12"
 pandas = "^2.2.3"
