--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,9 @@
+[tool.poetry.extras]
+notebook = [
+    "jupyter",
+    "ipywidgets",
+    "matplotlib",
+]
 [tool.poetry]
 name = "ev-energy-optimization"
 version = "0.1.0"
