--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,3 +57,6 @@ black = "^24.10.0"
 tqdm = "^4.66.5"
 shap = "^0.46.0"
 pyproj = "^3.7.2"
+gym = "^0.26.2"
+stable-baselines3 = "^2.7.0"
+shimmy = "^2.0.0"
